# gr-correctiq

./: CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
cmake/Modules/: correctiqConfig.cmake
docs/: CMakeLists.txt  README.correctiq
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: basic_receive_flowgraph.grc  dcoffset_test.grc  dcoffset_test.py
grc/: CMakeLists.txt  correctiq_SwapIQ.block.yml  correctiq_SwapIQ.xml  correctiq_correctiq.block.yml  correctiq_correctiq.xml  correctiq_correctiq_auto.block.yml  correctiq_correctiq_auto.xml  correctiq_correctiq_man.block.yml  correctiq_correctiq_man.xml
include/correctiq/: CMakeLists.txt  SwapIQ.h  api.h  correctiq.h  correctiq_auto.h  correctiq_man.h
lib/: CMakeLists.txt  SwapIQ_impl.cc  SwapIQ_impl.h  clSComplex.h  correctiq_auto_impl.cc  correctiq_auto_impl.h  correctiq_impl.cc  correctiq_impl.h  correctiq_man_impl.cc  correctiq_man_impl.h  qa_correctiq.cc  qa_correctiq.h  test_correctiq.cc
python/: CMakeLists.txt  __init__.py  qa_correctiq.py
python/bindings/: CMakeLists.txt  SwapIQ_python.cc  correctiq_auto_python.cc  correctiq_man_python.cc  correctiq_python.cc  python_bindings.cc
python/bindings/docstrings/: SwapIQ_pydoc_template.h  correctiq_auto_pydoc_template.h  correctiq_man_pydoc_template.h  correctiq_pydoc_template.h
swig/: CMakeLists.txt  correctiq_swig.i
